@@ -705,6 +705,17 @@ class TestRubyOptions < Test::Unit::TestCase
                           bug10555, encoding: "locale")
       end
     end
+
+    def test_command_line_progname_nonascii
+      bug10555 = '[ruby-dev:48752] [Bug #10555]'
+      name = "\u{3042}.rb"
+      expected = name.encode("locale") rescue "?.rb"
+      with_tmpchdir do |dir|
+        open(name, "w") {|f| f.puts "puts File.basename($0)"}
+        assert_in_out_err([name], "", [expected], [],
+                          bug10555, encoding: "locale")
+      end
+    end
   end
 
   def test_script_is_directory
